20100226
	mention -n nvram option in keyfs(4)
20100220
	appl/cmd/keyfs.b wasn't clunking fids on error in remove [issue 225]
20100213
	apply saoret.one's changes for thumb [issue 155]
20100205
	update man pages to replace most references to Styx by 9P
	update man pages to replace references to sys-dial(2) by dial(2)
	add DragonFly files (from fgudin and extrudedaluminiu, issue 181); possibly should automatically keep aligned with FreeBSD
	fpe handling in OpenBSD and FreeBSD [mechiel, issue 190]
	appl/cmd/vacfs.b apply fix from mechiel [issue 204]
20100203
	appl/lib/cfg.b treat \r as white space [issue 69, issue 70]
	add u64int to lib9.h files that needed it
	add sha2.c sha256block.c sha512block.c to libsec/port and include/libsec.h [issue 185, mechiel]
	add new sha functions to module/keyring.m and libinterp/keyring.c
20100115
	appl/cmd/tarfs.b man/4/tarfs changes to permission handling from mechiel [issue 220]
	appl/spree/mkfile add explicit -I$ROOT/module [issue 209, powerman]
20100110
	appl/cmd/tcs.b [issue 12, arvindht]: process unconverted bytes next cycle, flush conversion state; improve error checking
20091219
	change default roots in Nt utils to c:\inferno
20091215
	factotum(2) updated to include keyspec in signature
	appl/cmd/mount.b uses -k value as keyspec if -9 selected [not to much purpose with current factotum's p9any]
	bind(1) [for mount] updated to describe -k used for keyspec if -9 selected
20091214
	switch more commands to use dial(2)
	change emu/Linux/emu-g not to require X11 libs (again)
20091213
	temper the tendancy of port/dis.c to yield during idle gc: it's compensating for os scheduling, but yield less often
20091208
	add mkdir -p to makemk.sh to ensure output directories exist [issue 213]
20091127
	problems fixed in styxconv(2), which can now convert both ways [rog]
20091119
	emu/port/devfs-posix.c	missing waserror in dirread (obscure but possible failure)
20091007
	remove intermediate exception-raising function from charon implementation